Revision history for failures

{{$NEXT}}

    [CHANGES]

    - Revised default error message slightly ("Caught $class error"
      to "Caught $class")

0.002     2013-09-24 12:53:37 America/New_York

    [FIXED]

    - made tests less sensitive to exact short/longmess format from Carp

    - suppressed undef warning from length($msg) on older perls

0.001     2013-09-18 18:20:05 America/New_York

    - First release
